# rust-test-word-game

./: .gitignore  CACHING.md  Cargo.toml  README.md  Trunk.toml  index.html
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: deploy.yml
src/: main.rs
